# fpdec.rs

./: CHANGES.TXT  Cargo.toml  README.md  test-all.sh
.github/workflows/: ci.yml
benchmarks/order/: Cargo.toml
benchmarks/order/benches/: f64_bench.rs  fpdec_bench.rs  rdec_bench.rs
benchmarks/order/src/: lib.rs
fpdec/: Cargo.toml
fpdec-core/: Cargo.toml  README.md
fpdec-core/src/: lib.rs  parser.rs  powers_of_ten.rs  rounding.rs
fpdec-macros/: Cargo.toml  README.md
fpdec-macros/src/: lib.rs
fpdec-traits/: Cargo.toml
fpdec-traits/src/: lib.rs
fpdec/src/: lib.rs
fpdec/tests/: tests_macros.rs
src/: as_integer_ratio.rs  errors.rs  format.rs  from_float.rs  from_int.rs  from_str.rs  into_float.rs  into_int.rs  iter.rs  lib.rs  num_traits.rs  quantize.rs  round.rs  rounding.rs  traits.rs  unops.rs
src/binops/: add_sub.rs  checked_add_sub.rs  checked_div.rs  checked_mul.rs  checked_rem.rs  cmp.rs  div.rs  div_rounded.rs  mod.rs  mul.rs  mul_rounded.rs  rem.rs
tests/: tests_macros.rs
