[package]
name = "fpdec"
version = "0.6.2"
edition = "2021"
authors = ["Michael Amrhein <michael@adrhinum.de>"]
description = "Decimal fixed-point arithmetic."
readme = "README.md"
homepage = "https://github.com/mamrhein/fpdec.rs"
repository = "https://github.com/mamrhein/fpdec.rs"
documentation = "https://docs.rs/fpdec/"
license-file = "LICENSE.TXT"
keywords = ["number", "decimal", "fixed-point", "arithmetics"]
categories = ["data-structures", "mathematics"]

[dependencies]
fpdec-core = { path = "fpdec-core", version = "0.6.0" }
fpdec-macros = { path = "fpdec-macros", version = "0.6.0" }
num-traits = { version = "0.2.0", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = { version = "1.0" }

[features]
default = ["std"]
std = []
packed = []
serde-as-str = ["dep:serde"]

[workspace]
members = [".", "fpdec-core", "fpdec-macros"]
