[package]
name = "fpdec"
version = "0.14.0"
edition = "2021"
rust-version = "1.81"
authors = ["Michael Amrhein <michael@adrhinum.de>"]
description = "Decimal floating-point arithmetic."
readme = "README.md"
homepage = "https://github.com/mamrhein/fpdec.rs"
repository = "https://github.com/mamrhein/fpdec.rs"
documentation = "https://docs.rs/fpdec/"
license-file = "LICENSE.TXT"
keywords = ["number", "decimal", "floating-point", "arithmetics"]
categories = ["data-structures", "mathematics"]

[dependencies]
fpdec-core = { path = "fpdec-core", version = "0.13.0" }
fpdec-macros = { path = "fpdec-macros", version = "0.13.0" }
num-traits = { version = "0.2.0", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
rkyv = { version = "0.8", optional = true }

[dev-dependencies]
serde_json = { version = "1.0" }

[features]
default = ["std"]
std = []
packed = ["rkyv?/unaligned"]
serde-as-str = ["dep:serde"]

[workspace]
members = [".", "fpdec-core", "fpdec-macros"]
resolver = "2"
