[package]
name = "fpdec-core"
version = "0.13.1"
edition = "2021"
authors = ["Michael Amrhein <michael@adrhinum.de>"]
description = "Common constants and functions for crate fpdec."
readme = "README.md"
homepage = "https://github.com/mamrhein/fpdec.rs"
repository = "https://github.com/mamrhein/fpdec.rs"
documentation = "https://docs.rs/fpdec/"
license-file = "../LICENSE.TXT"
keywords = ["number", "decimal", "fixed-point", "arithmetics"]
categories = ["data-structures", "mathematics"]

[dependencies]

[features]
default = ["std"]
std = []
