[package]
name = "fpdec-macros"
version = "0.13.2"
edition = "2021"
authors = ["Michael Amrhein <michael@adrhinum.de>"]
description = "Macros supporting decimal floating-point arithmetic."
readme = "README.md"
homepage = "https://github.com/mamrhein/fpdec.rs"
repository = "https://github.com/mamrhein/fpdec.rs"
documentation = "https://docs.rs/fpdec/"
license-file = "../LICENSE.TXT"
keywords = ["number", "decimal", "floating-point", "arithmetics"]
categories = ["data-structures", "mathematics"]

[dependencies]
fpdec-core = { path = "../fpdec-core", version = "0.13.0" }
quote = "1.0"

[lib]
proc-macro = true
